# gen_ai_api

./: .gitignore  1_file_codebase.md  argument_helpers.py  cli_core.py  configs.py  google_tuned_models.json  main.py  pyproject.toml  requirements.txt  utils.py
gen_image/: openai_gen_image.py  xai_gen_image.py
gen_video/: gemini_veo3_gen_video.py
gen_voice/: openai_text_to_speech.py
search/: anthropic_deep_search.py  gemini_search.py  xai_reasoning.py  xai_search.py
search/output/: anthropic_deep_search_10_next_years.md  xai_reasoning_10_next_years.json  xai_reasoning_10_years.md  xai_reasoning_bc3772b8-68f5-b4e6-aabc-cbedb6eca8b4_grok-3-mini-fast.json
text/: __init__.py  anthropic_message.py  gemini_text.py  openai_text.py  xai_text.py
