[project]
name = "p-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "dim-gggl",email = "dimitri.gaggioli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai (>=1.27.0)",
    "xai-sdk (>=1.0.0)",
    "openai (>=1.97.1)",
    "anthropic (>=0.59.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
